center title and testimonials

--- a/src/components/testiminials/index.css
+++ b/src/components/testiminials/index.css
@@ -1,5 +1,6 @@
 .testimonials {
   margin: 50px auto 100px auto;
+  text-align: center;
 }
 .testimonials-title {
   font-family: Adobe Garamond Pro;
