--- a/src/components/body/index.css
+++ b/src/components/body/index.css
@@ -1,7 +1,8 @@
 .body-title {
   color: #14274a;
   font-size: 30px;
-  margin: 30px 0px;
+  margin: 30px auto;
+  text-align:center;
 }
 .body {
   width: 80%;
