--- a/src/components/testiminials/index.css
+++ b/src/components/testiminials/index.css
@@ -8,7 +8,7 @@
   font-size: 50px;
   line-height: 60px;
   /* identical to box height */
-
+  text-align: center;
   color: #14274a;
 }
 .testimonial-controls {
