edit some compobents and edit .env location, some points in header and footer to let them able to be adaptive with dynamic content

--- a/src/components/header-content/index.css
+++ b/src/components/header-content/index.css
@@ -14,3 +14,14 @@
 
   justify-content: space-between;
 }
+
+.contact-us {
+  color: white;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 80px;
+  padding: 20px 0px;
+  text-align: center;
+  line-height: 98px;
+}
